[gd_scene format=3 uid="uid://xh5p7buxoj6u"]

[ext_resource type="Script" uid="uid://bdverb6gogfyr" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="FontFile" uid="uid://hewc2akfmln8" path="res://assets/fonts/CherryBombOne-Regular.ttf" id="1_yqeox"]
[ext_resource type="PackedScene" uid="uid://blqsy4k6pbgi4" path="res://scenes/level.tscn" id="2_con2f"]
[ext_resource type="Texture2D" uid="uid://by34xl76rm6lq" path="res://assets/icons/sound_off.png" id="4_4ytvr"]
[ext_resource type="Texture2D" uid="uid://c0a81n6i88021" path="res://assets/icons/sound_on.png" id="5_g3eks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouk20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lti8b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mae5d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hy44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ytr4m"]

[node name="Menu" type="Control" unique_id=2042092872 node_paths=PackedStringArray("play_button", "exit_button")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vjb58")
level = ExtResource("2_con2f")
play_button = NodePath("MarginContainer/VBoxContainer/PlayButton")
exit_button = NodePath("MarginContainer/VBoxContainer/ExitButton")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1994543064]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1880.0
offset_bottom = 1040.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="RichTextLabel" parent="." unique_id=102160727]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 1880.0
offset_bottom = 290.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_yqeox")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[rainbow freq=0.1][wave amp=90.0 freq=3.0 connected=0.75][tornado radius=1.0 freq=1.0 connected=150]MÁS CARNAVAL![/tornado][/wave]
"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=583533366]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 324.0
offset_right = 613.0
offset_bottom = 1036.0
grow_vertical = 0
theme_override_constants/margin_left = 12
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=917620103]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=830314599]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.64134556, 0.64134556, 0.64134556, 1)
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 140
theme_override_styles/normal = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lti8b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mae5d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytr4m")
text = "JUGAR"

[node name="HowToPlayButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=2093944293]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.64134556, 0.64134556, 0.64134556, 1)
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lti8b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mae5d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytr4m")
text = "Cómo jugar?"

[node name="HowToPlayButton2" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1006796033]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.64134556, 0.64134556, 0.64134556, 1)
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lti8b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mae5d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytr4m")
text = "Créditos"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=2089715044]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.64134556, 0.64134556, 0.64134556, 1)
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lti8b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_mae5d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytr4m")
text = "Salir"

[node name="CheckButton" type="CheckButton" parent="." unique_id=763562344]
layout_mode = 0
offset_left = 1681.0
offset_top = 856.00006
offset_right = 2093.0
offset_bottom = 1264.0
scale = Vector2(0.4075, 0.4075)
theme_override_icons/checked = ExtResource("4_4ytvr")
theme_override_icons/unchecked = ExtResource("5_g3eks")

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
